# computer-graphics

./: .gitignore  README.md
graphical-system/: CMakeLists.txt  Handlers.hpp  MainWindow.cpp  MainWindow.hpp  Objects.hpp  graphical_system.glade  main.cpp  makefile
graphical-system/include/: Clipping.hpp  DisplayFile.hpp  Edge.hpp  Frame.hpp  Handlers.hpp  LinkedList.hpp  MainWindow.hpp  Matrix.hpp  Object.hpp  ObjectReader.hpp  Objects.hpp  Transform.hpp  Utils.hpp  ViewPort.hpp
graphical-system/src/: Clipping.cpp  MainWindow.cpp  Matrix.cpp  Object.cpp  ViewPort.cpp
